--- a/1-Langgraph/7-Reactarchitecture.ipynb
+++ b/1-Langgraph/7-Reactarchitecture.ipynb
@@ -469,6 +469,143 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "Divide that by 5\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "I need a specific number to divide by 5. Could you please provide the value you want me to use for this calculation?\n"
+     ]
+    }
+   ],
+   "source": [
+    "messages=[HumanMessage(content=\"Divide that by 5\")]\n",
+    "messages=graph.invoke({\"messages\":messages})\n",
+    "for m in messages['messages']:\n",
+    "    m.pretty_print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### MemorySaver\n",
+    "LangGraph can use a checkpointer to automatically save the graph state after each step.\n",
+    "\n",
+    "This built-in persistence layer gives us memory, allowing LangGraph to pick up from the last state update.\n",
+    "\n",
+    "One of the easiest checkpointers to use is the MemorySaver, an in-memory key-value store for Graph state.\n",
+    "\n",
+    "All we need to do is simply compile the graph with a checkpointer, and our graph has memory!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_openai import ChatOpenAI\n",
+    "llm = ChatOpenAI(model=\"gpt-4o\")\n",
+    "llm_with_tools = llm.bind_tools(tools)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Entire Chatbot With LangGraph\n",
+    "from IPython.display import Image, display\n",
+    "from langgraph.graph import StateGraph, START, END\n",
+    "from langgraph.prebuilt import ToolNode\n",
+    "from langgraph.prebuilt import tools_condition\n",
+    "\n",
+    "### Node definition\n",
+    "def tool_calling_llm(state:State):\n",
+    "    return {\"messages\":[llm_with_tools.invoke(state[\"messages\"])]}\n",
+    "\n",
+    "# Build graph\n",
+    "builder = StateGraph(State)\n",
+    "builder.add_node(\"tool_calling_llm\", tool_calling_llm)\n",
+    "builder.add_node(\"tools\", ToolNode(tools))\n",
+    "\n",
+    "builder.add_edge(START, \"tool_calling_llm\")\n",
+    "builder.add_conditional_edges(\n",
+    "    \"tool_calling_llm\",\n",
+    "    # If the latest message (result) from assistant is a tool call -> tools_condition routes to tools\n",
+    "    # If the latest message (result) from assistant is a not a tool call -> tools_condition routes to END\n",
+    "    tools_condition,\n",
+    ")\n",
+    "builder.add_edge(\"tools\",\"tool_calling_llm\")\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langgraph.checkpoint.memory import MemorySaver\n",
+    "memory=MemorySaver()\n",
+    "graph_memory = builder.compile(checkpointer=memory)\n",
+    "\n",
+    "# View\n",
+    "display(Image(graph_memory.get_graph().draw_mermaid_png()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Specify the thread\n",
+    "\n",
+    "config={\"configurable\":{\"thread_id\":\"1\"}}\n",
+    "# Specify an input\n",
+    "messages = [HumanMessage(content=\"Add 12 and 13.\")]\n",
+    "messages=graph_memory.invoke({\"messages\":messages},config=config)\n",
+    "for m in messages['messages']:\n",
+    "    m.pretty_print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "messages = [HumanMessage(content=\"add that number to 25\")]\n",
+    "messages=graph_memory.invoke({\"messages\":messages},config=config)\n",
+    "for m in messages['messages']:\n",
+    "    m.pretty_print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "messages = [HumanMessage(content=\"then multiplty that number by 2\")]\n",
+    "messages=graph_memory.invoke({\"messages\":messages},config=config)\n",
+    "for m in messages['messages']:\n",
+    "    m.pretty_print()"
+   ]
   }
  ],
  "metadata": {
